--- a/src/Components/Home/Project/Project.module.css
+++ b/src/Components/Home/Project/Project.module.css
@@ -39,14 +39,13 @@
   gap: 10px;
   border-radius: 10px;
   background-color: #fff;
-  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1); */
+  box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.5);
   transition: all 0.5s;
 }
-
 .project_card:hover {
-  transform: translateY(-10px);
+  transform: scale(1.1);
 }
-
 .image {
   width: 100%;
   height: 200px;
