--- a/src/Components/Home/Banner/Banner.module.css
+++ b/src/Components/Home/Banner/Banner.module.css
@@ -1,4 +1,4 @@
-.banner_home{
+.banner_home {
     /* background-color: #fff; */
     height: 100vh;
     display: flex;
@@ -6,78 +6,151 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-.banner_text{
+
+.banner_text {
     flex: 1;
 }
-.text_details{
+
+.text_details {
     position: absolute;
     top: 25%;
     left: 90px;
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    gap:15px ;
+    gap: 15px;
 }
-.title{
+
+.title {
     font-size: 80px;
     font-weight: 700;
 }
-.banner_img{
-    flex:1;
+
+.banner_img {
+    flex: 1;
     position: relative;
 }
-.person_img{
-    background-image: url('../../Assets/IMG_Profile-removebg-preview.png');
-    background-position:center;
+
+.person_img {
+    background-image: url('../../Assets/IMG_20240222_1032Banner.png');
+    background-position: center;
     background-repeat: no-repeat;
-    background-size:70%;
+    background-size: contain;
     height: 90%;
     width: 85%;
     position: absolute;
     right: 10px;
     top: 1px;
-    border-radius: 200%;
+    border-radius: 100%;
     /* mix-blend-mode:multiply;     */
     /* z-index: 1; */
     box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.5);
 }
-.para{
+.bannerhide_img {
+    flex: 1;
+    display: none;
+}
+.personhide_img {
+
+    display: none;
+}
+.para {
     font-weight: 400;
-    color: #555;
+    /* color: #555; */
+    color:#fff;
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
-@media (max-width:1080px){
-    .banner_home{
-        background-image: url('../../Assets/IMG_20220208_220409_420-removebg-preview.png');
+.texthide_details{
+    display: none;
+}
+@media (max-width:1080px) {
+    .banner_home {
+        /* background-image: url('../../Assets/IMG_20240222_1032Banner.png');
         background-position:center;
         background-repeat: no-repeat;
         background-size: cover;
         background-color: #fff;
-        opacity:0.8;
+        opacity:0.8; */
+        flex-direction: column-reverse;
+        height: 70vh;
     }
-    .banner_img{
+
+    .bannerhide_img {
+        display: block;
+        flex: 2;
+        position: relative;
+        padding: 1rem;
+    }
+    .personhide_img {
+        display: block;
+        background-image: url('../../Assets/IMG_20240222_1032Banner.png');
+        /* mix-blend-mode:multiply;     */
+        /* z-index: 1; */
+        box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.5);
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 100vh;
+        border-radius: 100%;
+        max-height: 358px;
+        max-width: 356px;
+        margin: auto;
+    }
+    .banner_img {
         background-image: unset;
-    } 
-    .text_details{
+        flex: 0.1rem;
+    }
+    .banner_text {
+        flex: 0.1
+    }
+    .text_details {
         position: absolute;
-        top: 20%;
-        left: 20px;
+        top: 45%;
+        left: 10%;
         padding: 1rem;
         display: flex;
         flex-direction: column;
-        gap:15px ;
+        gap: 15px;
         word-wrap: break-word;
         word-break: break-all;
+        z-index: 1;
+        display: none;
     }
-    .title{
+    .title {
         font-size: clamp(2rem, 10vw, 3rem);
     }
-    .desig_nation{
+    .desig_nation {
         font-size: clamp(1rem, 3vw, 2.5rem);
     }
-    .person_img{
+    .person_img {
         display: none;
+    }
+    .texthide_details{
+        display: block;
+        background-color: #fff8f8;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+    .para_hide{
+        font-weight: 400;
+        /* color: #555; */
+        color:#555;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+}
+@media (max-width:480px){
+    .banner_home{
+        height: 60vh;
+    }
+    .bannerhide_img{
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
     }
 }
