--- a/src/Components/Home/Banner/Banner.module.css
+++ b/src/Components/Home/Banner/Banner.module.css
@@ -67,8 +67,8 @@
 }
 @media (max-width:1080px) {
     .banner_home {
-        /* background-image: url('../../Assets/IMG_20240222_1032Banner.png');
-        background-position:center;
+        /* background-image: url('../../Assets/dark-blue-modern-blurred-background-vector.jpg'); */
+        /* background-position:center;
         background-repeat: no-repeat;
         background-size: cover;
         background-color: #fff;
@@ -82,6 +82,9 @@
         flex: 2;
         position: relative;
         padding: 1rem;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
     }
     .personhide_img {
         display: block;
@@ -130,10 +133,14 @@
     .texthide_details{
         display: block;
         background-color: #fff8f8;
+        backdrop-filter: 12px;
         padding: 1rem;
         display: flex;
         flex-direction: column;
         gap: 15px;
+        position: relative;
+        box-shadow: 0 4px 4px  rgba(0, 0, 0, 0.1);
+      
     }
     .para_hide{
         font-weight: 400;
@@ -142,8 +149,100 @@
         display: flex;
         flex-direction: column;
         gap: 5px;
+        z-index: 1;
+       
+    }
+    .top_bottom{
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        top: 30%;
+        left: 48%;
+        background-color: rgb(202, 150, 252);
+        box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.5);
+        border-radius: 100%;
+        z-index: -1;
+        animation: slideBothSide 4s infinite both;
+        filter: blur(2px);
+    }
+    .right_left{
+        width: 180px;
+        height: 180px;
+        position: absolute;
+        bottom: 40%;
+        left: 0;
+        background-color: rgb(164, 227, 250);
+        box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.5);
+        border-radius: 100%;
+        z-index: -2;
+        animation: slideRightToleft 6s infinite both;
+        filter: blur(2px);
+    }
+    .left_right{
+        width: 150px;
+        height: 150px;
+        position: absolute;
+        right: 155px;
+        bottom: 30px;
+        background-color: rgb(221, 221, 172);
+        box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.5);
+        border-radius: 100%;
+        z-index: -3;
+        animation: slideLeftToRight 8s infinite both;
+        filter: blur(2px);
+    }
+    .middle{
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        top: 29%;
+        left: 48%;
+        background-color: rgb(202, 150, 252);
+        box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.5);
+        border-radius: 100%;
+        z-index: -1;
+        animation: slideBothSide 6s infinite both;
+        filter: blur(2px);
+    }
+    .middle_end{
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        top: 10%;
+        left: 0;
+        background-color: rgb(255, 177, 151);
+        box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.5);
+        border-radius: 100%;
+        z-index: -1;
+        animation: slideBothSide 6s infinite both;
+        filter: blur(2px);
+    }
+
+}
+@keyframes slideLeftToRight{
+    50%{
+        transform: translateX(100%);
+    }
+    50%{
+        transform: translateX(100%);
     }
 }
+@keyframes slideRightToleft{
+    50%{
+        transform: translateX(100%);
+    }
+    50%{
+        transform: translateX(100%);
+    }
+}
+@keyframes slideBothSide{
+      50% {
+        transform: translateY(100%);
+      }
+      500% {
+        transform: translateY(100%);
+      }
+  }
 @media (max-width:480px){
     .banner_home{
         height: 60vh;
