--- a/src/Components/Home/About/About.module.css
+++ b/src/Components/Home/About/About.module.css
@@ -53,7 +53,7 @@
     border: 5px solid #ff9301;;
     border-radius: 50%;
     max-height: 358px;
-    max-width: 356px;
+    max-width: 358px;
     margin: auto;
 }
 .about_text_me{
@@ -508,4 +508,10 @@
         width: 20%;
     }
     
+}
+@media (max-width:480px){
+    .image_bg{
+        max-height: 300px;
+        max-width: 300px;
+    }
 }
