--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
-    font-family:'Rubik', sans-serif
+    font-family:'Rubik', sans-serif !important
 }
 
 a{
