--- a/src/Components/Home/Contact/Contact.module.css
+++ b/src/Components/Home/Contact/Contact.module.css
@@ -48,6 +48,12 @@
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 15px 0 rgba(0,0,0,0.1);
+    position: relative;
+
+  }
+  .alertmsgs{
+    position: absolute;
+    right: 1px;
   }
   .form_main{
     display: flex;
