--- a/src/Components/Home/Project/Project.module.css
+++ b/src/Components/Home/Project/Project.module.css
@@ -25,7 +25,7 @@
 .project_details {
   display: flex;
   margin: 20px 0;
-  padding: 1rem;
+  padding: 2rem;
   background-color: #f7f7ff;
   border-radius: 10px;
   gap: 1rem;
@@ -42,13 +42,14 @@
   /* box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1); */
   box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.5);
   transition: all 0.5s;
+  flex-grow: 1;
 }
 .project_card:hover {
   transform: scale(1.1);
 }
 .image {
   width: 100%;
-  height: 200px;
+  height: 150px;
   filter: grayscale(80%);
   filter: blur(8px);
   position: relative;
